feat: new rest sintaxe
